--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,6 +2,7 @@
   --orange-color: #ff7a15;
   --dark-orange-color: #bd5d14;
   --write-color: #FFFFFF;
+  --gray-color: #d1d1d1;
 
   --border-radius-small: 8px;
 }
