feat: create useToRoute.ts, ErrorLayout.vue

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,7 +2,8 @@
   --orange-color: #ff7a15;
   --dark-orange-color: #bd5d14;
   --write-color: #FFFFFF;
-  --gray-color: #d1d1d1;
+  --gray-color: #DDDDDD;
+  --black-color: #1E1E1EL;
 
   --border-radius-small: 8px;
 }
