--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,9 +1,15 @@
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-ul {
+ul, ol {
   list-style: none;
+}
+
+img {
+  display: block;
 }
