--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,6 +2,7 @@
   --orange-color: #ff7a15;
   --dark-orange-color: #bd5d14;
   --write-color: #FFFFFF;
+  --white-color-blur: rgba(255, 255, 255, 0.9);
   --gray-color: #DDDDDD;
   --black-color: #1E1E1EL;
 
